# polytrage

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  polytrage.example.toml  polytrage.service  pyproject.toml
src/polytrage/: __init__.py  api.py  arbitrage.py  bot.py  config.py  diagnose.py  health.py  logging_setup.py  models.py  notify.py  profit.py  scanner.py  storage.py
tests/: test_api.py  test_arbitrage.py  test_bot.py  test_config.py  test_e2e_simulation.py  test_health.py  test_notify.py  test_profit.py  test_scanner.py  test_storage.py
