[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytrage"
version = "0.1.0"
description = "Polymarket arbitrage scanner — detects mispriced markets for risk-free profit"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
polytrage = "polytrage.bot:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polytrage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
